@@ -23,3 +23,4 @@ AV2 Changelog :: version a4.5
 > Fix ability to create many fire arcs at once
 > Fix bison always wanting to breed upon world reload
 > Fix weirdness with bending switch order (z/c); bending in alphabetical order
+> Fix attacking bison in any way (bow, floating block, etc) will make you mount it
